--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,6 @@
-# Kafka bootstrap applies to all topics
-kafka.bootstrap.servers=localhost:9092
+# Infinispan
+infinispan.remote.server-list=infinispan-1:11222
+infinispan.remote.auth-username=xxxxxx
+infinispan.remote.auth-password=yyyyyy
 
-# Kafka boilerplate
-kafka.sasl.jaas.config = ""
-kafka.sasl.mechanism = PLAIN
-kafka.security.protocol = PLAINTEXT
-
-# Input queue
-mp.messaging.incoming.ingress.connector=smallrye-kafka
-#mp.messaging.incoming.ingress.topic=FISH
-#mp.messaging.incoming.ingress.group.id=any?
-
-# Logging
-quarkus.log.level=INFO
-
-#quarkus.log.sentry=false
-#quarkus.log.sentry.in-app-packages=*
-#quarkus.log.sentry.dsn=FILL_ME
-
+#quarkus.infinispan-client.devservices.port=11222
