--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
       <dependency>
         <groupId>io.opentelemetry</groupId>
         <artifactId>opentelemetry-bom</artifactId>
-        <version>1.33.0</version>
+        <version>1.40.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -59,9 +59,9 @@
       <artifactId>opentelemetry-exporter-otlp</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.opentelemetry.semconv</groupId>
+      <groupId>io.opentelemetry</groupId>
       <artifactId>opentelemetry-semconv</artifactId>
-      <version>1.23.1-alpha</version>
+      <version>1.30.1-alpha</version>
     </dependency>
   </dependencies>
 
