Configure Infinispan client marshaller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 infinispan.remote.server-list=infinispan-1:11222
 infinispan.remote.auth-username=xxxxxx
 infinispan.remote.auth-password=yyyyyy
+infinispan.remote.marshaller=org.infinispan.commons.marshall.ProtoStreamMarshaller
