--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - "8083:8083"
     depends_on:
       - kafka-1
+      - infinispan-1
   # Mustelid service
   mustelid-service:
     image: mustelid_demo:latest
@@ -35,6 +36,7 @@ services:
       - "8084:8084"
     depends_on:
       - kafka-1
+      - infinispan-1
   # Feline service
   feline-service:
     image: feline_demo:latest
@@ -52,6 +54,7 @@ services:
       - feline-service
       - fish-service
       - mustelid-service
+      - infinispan-1
   # Animal service
   animal-service:
     image: animals_demo:latest
@@ -60,6 +63,7 @@ services:
     depends_on:
       - fish-service
       - mammal-service
+      - infinispan-1
 
   # Hospital
   hospital-service:
