--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,26 @@
     <quarkus-logging-sentry.version>1.2.1</quarkus-logging-sentry.version>
   </properties>
 
+  <dependencyManagement>
+    <dependencies>
+      <!-- override spring boot dependency of infinispan -->
+      <dependency>
+        <groupId>org.infinispan</groupId>
+        <artifactId>infinispan-bom</artifactId>
+        <version>15.0.6.Final</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -41,6 +61,7 @@
     <dependency>
       <groupId>org.infinispan</groupId>
       <artifactId>infinispan-spring-boot3-starter-remote</artifactId>
+      <version>15.0.6.Final</version>
     </dependency>
     <dependency>
       <groupId>org.apache.kafka</groupId>
